--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
     <audio class="song" loop autoplay>
-        <source src="./music/hbd.mpeg">
+        <source src="./music/Keep Your Mind Wide Open.mp3">
         </source>
         Your browser isn't invited for super fun audio time.
     </audio>
@@ -27,9 +27,9 @@
         <div class="one">
             <h1 class="one">
                 Hi
-                <span id="name">Irene</span>
+                <span id="name">Zoha</span>
             </h1>
-            <p class="two" id="greetingText">I really like your name btw!</p>
+            <p class="two" id="greetingText">I really did write that sticky note on the appreciation wall btw!</p>
         </div>
 
         <div class="three">
@@ -39,15 +39,15 @@
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                Happy birthday to youu!! Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur quisquam amet ipsam vitae, voluptatum architecto aliquid id quo error tempora quos aperiam magni necessitatibus quas ut, possimus nesciunt nam ad.
+                    It's not just a new day, week, or a year. It's your birthday! Happy birthday, Zoha 🎂 🥳  I hope this year is going to be exactly how you want it to be. May it hold forever happiness for you and your future. Aim high and achieve all your goals, tiger!
                 </p>
                 <p class="fake-btn">Send</p>
             </div>
         </div>
 
         <div class="five">
-            <p class="idea-1">That's what I was going to do.</p>
-            <p class="idea-2">But then I stopped.</p>
+            <p class="idea-1">That's what I said last year. And I hope it indeed was.</p>
+            <p class="idea-2">I thought to do a similar wish and move on.</p>
             <p class="idea-3">
                 I realised, I wanted to do something<br>
                 <strong>special</strong>
@@ -55,7 +55,7 @@
             </p>
             <p class="idea-4">Because,</p>
             <p class="idea-5">
-                You are Special
+                I couldn't place a gift at your desk
                 <span>:)</span>
             </p>
             <p class="idea-6">
@@ -65,11 +65,11 @@
         </div>
 
         <div class="six">
-            <img src="./img/irene.jpg" alt="profile" class="profile-picture" id="imagePath"/>
+            <img src="./img/hbd.webp" alt="profile" class="profile-picture" id="imagePath"/>
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
                 <h3 class="wish-hbd">Happy Birthday!</h3>
-                <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
+                <h5 id="wishText">Thanks for being a great colleague and friend! ;)</h5>
             </div>
         </div>
 
@@ -142,8 +142,8 @@
         </div>
 
         <div class="nine">
-            <p>Okay, now come back and tell me if you liked it.</p>
-            <p id="replay">Or click, if you want to watch it again.</p>
+            <p>Hope you liked it!</p>
+            <p id="replay">click here, if you want to watch it again</p>
             <p class="last-smile">:)</p>
         </div>
     </div>
